kustomize/production/obsidian-livesync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian-livesync-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5984
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data
