kustomize/production/obsidian-livesync/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync-production
spec:
  parentRefs:
    - name: home-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - obsidian-sync.home.lan
  rules:
    - backendRefs:
        - name: couchdb
          port: 5984
